# gstackapp

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  PERSONA_FAMILY.md  PHASE1_ORCHESTRATION.md  PHASE2_ORCHESTRATION.md  README.md  REVIEW_PROMPT.md  SECURITY.md  SWIFT_PACKAGE_COORDINATION.md  TODOS.md  drizzle.config.ts  mc.config.example.json  mc.config.json  migrate_pipeline_runs.js  package-lock.json  package.json  pnpm-lock.yaml  services.toml  start-compute.sh  start-dashboard.sh  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts  vitest.workspace.ts
.github/: pull_request_template.md
.planning/: HANDOFF.json  LEARNINGS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v2.0-VISION.md  worklog.md
.projects/: state.json  state.local.json
convex/: README.md  package.json  tsconfig.json
dashboard/: Cargo.toml
dashboard/src/: main.rs
dashboard/src/api/: hub_client.rs  mod.rs  zeroclaw_client.rs
dashboard/src/components/: health_badge.rs  layout.rs  mod.rs  node_card.rs
dashboard/src/pages/: overview.rs
docs/: design-system.html
infra/: README.md  com.quartermint.mc-update-watcher.plist  deploy-hub.sh  deploy-worker.sh  deploy.sh  health-check.sh  install.sh  mc-update-watcher.sh  mc.config.mac-mini.json  mission-control.plist  secrets.template.md  setup-node.sh
scripts/: notify-package-change.sh  verify-all-apps.sh
(+724 files in other folders)
